test_suite/tests/ui/transparent/enum.stderr
error: #[serde(transparent)] is not allowed on an enum
 --> tests/ui/transparent/enum.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / #[serde(transparent)]
5 | | enum E {}
  | |_________^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
